footer fix on mobile

--- a/Project_2/CSS/default.css
+++ b/Project_2/CSS/default.css
@@ -257,9 +257,12 @@ form>div>label {
     width: 100%;
 }
 
-.bottom-footer {
-    position: absolute;
-    bottom: 0;
+@media (min-width: 768px) {
+
+    .bottom-footer {
+        position: absolute;
+        bottom: 0;
+    }
 }
 
 footer {
